--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -72,4 +73,8 @@ dependencies {
 
     implementation 'org.koin:koin-android-ext:2.2.2'
     implementation 'org.koin:koin-androidx-viewmodel:2.2.2'
+
+        // Kotlin
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 }
