--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,11 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".alarmсlock.NotificationBroadcast"/>
-        <service android:name=".alarmсlock.AlarmService" />
+        <receiver android:name=".alarmсlock.NotificationBroadcast"
+            android:enabled="true"
+            android:exported="true"/>
+        <service android:name=".alarmсlock.AlarmService"
+       />
 
 
     </application>
