--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.1"
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0" //для конвертации Flow в LiveData
-    implementation "androidx.room:room-ktx:2.3.0" //для корутин в Room
+    implementation "androidx.room:room-ktx:2.3.0"
+    implementation 'androidx.test:core-ktx:1.3.0'//для корутин в Room
     kapt "androidx.room:room-compiler:2.3.0" //Room основная либа
     implementation "androidx.room:room-runtime:2.3.0" //Room основная либа
     implementation "androidx.fragment:fragment-ktx:1.3.5"
@@ -81,4 +82,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     //map
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
